# flirtools

./: .gitignore  Makefile  README.md  pyproject.toml
config/: example-flir-bfs-config.yaml
config/north-building-four-cameras/: camera-1.yaml  camera-2.yaml  camera-3.yaml
flirtools/: calibration.py  camera.py  utils.py  visualize.py
howto/: persistent_ip.md  persistent_ip_octect.py
tests/: test_calibration.py  test_camera.py
